--- a/SehomeTutoringCenter/Properties/Resources.resx
+++ b/SehomeTutoringCenter/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Sehome_color129x200-97x150" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Sehome_color129x200-97x150.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
